platform/000-infrastructure/010-argocd/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik 
  name: traefik-argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik 
  rules:
  - host: argocd.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.127.0.0.1.nip.io
    secretName: argocd-tls
